--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "qunit": "~1.12.0",
-    "jquery": "~1.7.2"
+    "jquery": "~1.9.0",
+    "bootstrap": "~3.2.0",
+    "prismjs": "*"
   }
 }
