--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     }
   ],
   "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-bake": "^0.3.12",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "~0.5.1",
-    "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.8.0",
-    "time-grunt": "~0.3.2",
-    "load-grunt-tasks": "~0.6.0",
     "jshint-stylish": "~0.2.0",
-    "grunt": "~0.4.5"
+    "load-grunt-tasks": "~0.6.0",
+    "time-grunt": "~0.3.2"
   }
 }
