--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "type": "git",
     "url": "https://github.com/cleargif/jq-element-revealer.git"
   },
-  "licenses": [
-    {
-      "type": "http://cleargifltd.mit-license.org/"
-    }
-  ],
+  "licenses": [{
+    "type": "http://cleargifltd.mit-license.org/"
+  }],
+  "scripts": {
+    "test": "grunt build --verbose"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-bake": "^0.3.12",
